--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ li{
 }
 
 /* Small phones */
-@media (max-width: 480px) {
+/*@media (max-width: 480px) {
     .container {
         width: 95%;
         border-radius: 10px;
@@ -84,4 +84,4 @@ li{
         font-size: 14px;
         padding: 6px;
     }
-}
+}*/
